# flat-flake

./: .gitignore  Cargo.toml  LICENSE  README.md  flake-module.nix  flake.nix
.github/workflows/: check.yml  update.yml
src/: check.rs  config.rs  error.rs  flake.rs  main.rs  options.rs
